--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,13 +5,22 @@ on:
   pull_request:
     branches: [ master, main ]
   workflow_dispatch:
+
 jobs:
-  build:
+  # Linux and Windows builds
+  build-linux-windows:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [darwin, windows, linux]
-        arch: [amd64, arm64]
+        include:
+          - os: linux
+            arch: amd64
+          - os: linux
+            arch: arm64
+          - os: windows
+            arch: amd64
+          - os: windows
+            arch: arm64
     name: Build for ${{ matrix.os }}/${{ matrix.arch }}
     steps:
       - name: Checkout source code
@@ -39,75 +48,48 @@ jobs:
           mkdir -p dist/${{ matrix.os }}-${{ matrix.arch }}
           GOOS=${{ matrix.os }} GOARCH=${{ matrix.arch }} go build -o dist/${{ matrix.os }}-${{ matrix.arch }}/$OUTPUT_NAME$EXT cmd/main.go
       
-      - name: Install packaging tools for Linux (RPM)
-        if: matrix.os == 'linux'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y rpm
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.os }}-${{ matrix.arch }}
+          path: dist/${{ matrix.os }}-${{ matrix.arch }}/
+
+  # macOS builds using native runner
+  build-macos:
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        arch: [amd64, arm64]
+    name: Build for darwin/${{ matrix.arch }}
+    steps:
+      - name: Checkout source code
+        uses: actions/checkout@v3
       
-      - name: Install packaging tools for macOS (DMG)
-        if: matrix.os == 'darwin'
-        run: |
-          # Install create-dmg tool
-          npm install -g create-dmg || true
-          # Alternative: use genisoimage if create-dmg fails
-          sudo apt-get update
-          sudo apt-get install -y genisoimage
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.22'
       
-      - name: Package for Linux (RPM)
-        if: matrix.os == 'linux'
+      - name: Install go-bindata
         run: |
-          APP_NAME=your-app
-          VERSION=1.0.0
-          
-          # Create RPM build structure
-          mkdir -p rpmbuild/{BUILD,RPMS,SOURCES,SPECS,SRPMS}
-          mkdir -p rpmbuild/SOURCES/$APP_NAME-$VERSION/usr/local/bin
-          
-          # Copy binary
-          cp dist/${{ matrix.os }}-${{ matrix.arch }}/$APP_NAME rpmbuild/SOURCES/$APP_NAME-$VERSION/usr/local/bin/
-          
-          # Create tarball
-          cd rpmbuild/SOURCES
-          tar -czf $APP_NAME-$VERSION.tar.gz $APP_NAME-$VERSION/
-          cd ../..
-          
-          # Create RPM spec file
-          cat > rpmbuild/SPECS/$APP_NAME.spec << EOF
-          Name: $APP_NAME
-          Version: $VERSION
-          Release: 1
-          Summary: Your App Description
-          License: MIT
-          Source0: %{name}-%{version}.tar.gz
-          BuildArch: x86_64
-          
-          %description
-          Your application description
-          
-          %prep
-          %setup -q
-          
-          %install
-          mkdir -p %{buildroot}/usr/local/bin
-          cp usr/local/bin/$APP_NAME %{buildroot}/usr/local/bin/
-          
-          %files
-          /usr/local/bin/$APP_NAME
-          
-          %changelog
-          * $(date +'%a %b %d %Y') Builder <builder@example.com> - $VERSION-1
-          - Initial package
-          EOF
-          
-          # Build RPM
-          rpmbuild --define "_topdir $(pwd)/rpmbuild" -ba rpmbuild/SPECS/$APP_NAME.spec
-          
-          # Copy RPM to dist
-          cp rpmbuild/RPMS/x86_64/$APP_NAME-$VERSION-1.x86_64.rpm dist/${{ matrix.os }}-${{ matrix.arch }}.rpm
+          go install github.com/go-bindata/go-bindata/v3/go-bindata@latest
+          echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
+      
+      - name: Generate bindata files
+        run: |
+          go-bindata -o internal/util/access.go -pkg util static/... templates/... cache/...
+      
+      - name: Build binary
+        run: |
+          OUTPUT_NAME=your-app
+          mkdir -p dist/darwin-${{ matrix.arch }}
+          GOOS=darwin GOARCH=${{ matrix.arch }} go build -o dist/darwin-${{ matrix.arch }}/$OUTPUT_NAME cmd/main.go
+      
+      - name: Install create-dmg
+        run: |
+          npm install -g create-dmg
       
       - name: Package for macOS (DMG)
-        if: matrix.os == 'darwin'
         run: |
           APP_NAME=your-app
           
@@ -116,7 +98,7 @@ jobs:
           mkdir -p $APP_NAME.app/Contents/Resources
           
           # Copy binary
-          cp dist/${{ matrix.os }}-${{ matrix.arch }}/$APP_NAME $APP_NAME.app/Contents/MacOS/
+          cp dist/darwin-${{ matrix.arch }}/$APP_NAME $APP_NAME.app/Contents/MacOS/
           chmod +x $APP_NAME.app/Contents/MacOS/$APP_NAME
           
           # Create Info.plist
@@ -135,40 +117,29 @@ jobs:
               <string>1.0.0</string>
               <key>CFBundlePackageType</key>
               <string>APPL</string>
+              <key>LSMinimumSystemVersion</key>
+              <string>10.12</string>
           </dict>
           </plist>
           EOF
           
-          # Create DMG using genisoimage (cross-platform alternative)
-          mkdir -p dmg-contents
-          cp -r $APP_NAME.app dmg-contents/
-          
-          # Create DMG
-          genisoimage -V "$APP_NAME" -D -R -apple -no-pad -o dist/${{ matrix.os }}-${{ matrix.arch }}.dmg dmg-contents/
-      
-      - name: Rename Windows executable
-        if: matrix.os == 'windows'
-        run: |
-          # Windows binary is already .exe, just move it to final location
-          cp dist/${{ matrix.os }}-${{ matrix.arch }}/your-app.exe dist/${{ matrix.os }}-${{ matrix.arch }}.exe
-      
-      - name: Upload Linux RPM
-        if: matrix.os == 'linux'
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ matrix.os }}-${{ matrix.arch }}-rpm
-          path: dist/${{ matrix.os }}-${{ matrix.arch }}.rpm
+          # Create DMG using create-dmg
+          create-dmg \
+            --volname "$APP_NAME" \
+            --volicon "$APP_NAME.app/Contents/Resources/icon.icns" \
+            --window-pos 200 120 \
+            --window-size 600 300 \
+            --icon-size 100 \
+            --icon "$APP_NAME.app" 175 120 \
+            --hide-extension "$APP_NAME.app" \
+            --app-drop-link 425 120 \
+            "dist/darwin-${{ matrix.arch }}.dmg" \
+            "$APP_NAME.app" || \
+          # Fallback: use hdiutil if create-dmg fails
+          hdiutil create -volname "$APP_NAME" -srcfolder "$APP_NAME.app" -ov -format UDZO "dist/darwin-${{ matrix.arch }}.dmg"
       
       - name: Upload macOS DMG
-        if: matrix.os == 'darwin'
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.os }}-${{ matrix.arch }}-dmg
-          path: dist/${{ matrix.os }}-${{ matrix.arch }}.dmg
-      
-      - name: Upload Windows EXE
-        if: matrix.os == 'windows'
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ matrix.os }}-${{ matrix.arch }}-exe
-          path: dist/${{ matrix.os }}-${{ matrix.arch }}.exe
+          name: darwin-${{ matrix.arch }}-dmg
+          path: dist/darwin-${{ matrix.arch }}.dmg
